
Libraries:
- libgwyddion: A function for copying GwySIValueFormat was added; the
  structure is also registered as a boxed type now.

Modules:
- Image export (new): Replaces image rendering in the pixmap module; can
  export to vector graphics formats: PDF, EPS and SVG.  The corresponding
  file types are called ‘pdfcairo’, ‘pngcairo’, etc.
- NX II (new): Imports EMSYS NX II AFM files.
- Pixmap: Only used for image import; image rendering functions were removed.
- Statistical quantity: Crash in saving the statistics was fixed (introduced
  in 2.38).


2.38 (2014-09-18)
Application:
- Pressing F1 shows help, i.e. it points a web browser to the relevant part
  of the user guide (in most program windows).  Most dialogs also have a Help
  button now.
- Translations updated: Czech, French, German, Russian, Spanish.

Libraries:
- libgwyprocess: New function to find a height threshold by the Otsu method.
- libgwyprocess: New functions to calculate data field total variation.
- libgwyprocess: Macro gwy_data_field_invalidate() is also provided as
  a function so it is available in pygwy now.
- libgwymodule: New functions to obtain the name of the currently running
  file, proc, volume and graph module functions.
- libgwyprocess: New functions to count regional minima and maxima.
- libgwyapp: New simplified logging functions that do not require passing the
  function name.
- libgwyprocess: New function for numbering grains assuming the mask is
  periodic and grains can touch across the opposite edges.
- libgwyapp: New functions for help handling.
- libgwydgets: Real scale in 3D view can be set arbitrarily, not just 1:1.
- libgwyprocess: New function to update units and dimensions of 2D FFT output.
- libgwyapp: New file module utility function for masking NaNs and infs.

Modules:
- OpenGPS (new): Imports OpenGPS surface data format (ISO 5436-2).
- JEOL JSPM (new): Imports JEOL JSPM data files.
- Diffusion synthesis (new): Artificial surface generation by a diffussion