@@ -11,6 +11,7 @@ Modules:
   export to vector graphics formats: PDF, EPS and SVG.  The corresponding
   file types are called ‘pdfcairo’, ‘pngcairo’, etc.
 - NX II (new): Imports EMSYS NX II AFM files.
+- FemtoScan (new): Imports FemtoScan SPM files.
 - Pixmap: Only used for image import; image rendering functions were removed.
 - Statistical quantity: Crash in saving the statistics was fixed (introduced
   in 2.38).
